@@ -135,6 +135,19 @@
 				</tr>
 			</table>
 		</div>
+		<div id="divunderground">
+			<br>
+			<table class="display" id="hardwareparamsunderground" border="0" cellpadding="0" cellspacing="20">
+				<tr>
+					<td align="right" style="width:110px"><label><span data-i18n="API Key"></span>:</label></td>
+					<td><input type="text" id="apikey" style="width: 250px; padding: .2em;" class="text ui-widget-content ui-corner-all" /></td>
+				</tr>
+				<tr>
+					<td align="right" style="width:110px"><label><span data-i18n="Location"></span>:</label></td>
+					<td><input type="text" id="location" style="width: 250px; padding: .2em;" class="text ui-widget-content ui-corner-all" /></td>
+				</tr>
+			</table>
+		</div>
 		<div id="divlogin">
 			<br>
 			<table class="display" id="hardwareparamslogin" border="0" cellpadding="0" cellspacing="20">
@@ -314,6 +327,39 @@ function UpdateHardware(idx,Mode1,Mode2,Mode3,Mode4,Mode5)
 			 }     
 		});
 	}
+	else if (text.indexOf("Underground") >= 0)
+	{
+		var apikey=$("#hardwarecontent #divunderground #apikey").val();
+		if (apikey=="")
+		{
+			ShowNotify($.i18n('Please enter an API Key!'), 2500, true);
+			return;
+		}
+		var location=$("#hardwarecontent #divunderground #location").val();
+		if (location=="")
+		{
+			ShowNotify($.i18n('Please enter an Location!'), 2500, true);
+			return;
+		}
+		$.ajax({
+			 url: "json.htm?type=command&param=updatehardware&htype=" + hardwaretype +
+				"&port=1" + 
+				"&username=" + apikey + 
+				"&password=" + location +
+				"&name=" + name + 
+				"&enabled=" + bEnabled + 
+				"&idx=" + idx +
+				"&Mode1=" + Mode1 + "&Mode2=" + Mode2 + "&Mode3=" + Mode3 + "&Mode4=" + Mode4 + "&Mode5=" + Mode5,
+			 async: false, 
+			 dataType: 'json',
+			 success: function(data) {
+				RefreshHardwareTable();
+			 },
+			 error: function(){
+					ShowNotify($.i18n('Problem updating hardware!'), 2500, true);
+			 }     
+		});
+	}
 }
 
 function AddHardware()
@@ -422,6 +468,32 @@ function AddHardware()
 		var password=$("#hardwarecontent #divlogin #password").val();
 		$.ajax({
 			 url: "json.htm?type=command&param=addhardware&htype=" + hardwaretype + "&address=" + address + "&port=" + port + "&username=" + username + "&password=" + password + "&name=" + name + "&enabled=" + bEnabled,
+			 async: false, 
+			 dataType: 'json',
+			 success: function(data) {
+				RefreshHardwareTable();
+			 },
+			 error: function(){
+					ShowNotify($.i18n('Problem adding hardware!'), 2500, true);
+			 }     
+		});
+	}
+	else if (text.indexOf("Underground") >= 0)
+	{
+		var apikey=$("#hardwarecontent #divunderground #apikey").val();
+		if (apikey=="")
+		{
+			ShowNotify($.i18n('Please enter an API Key!'), 2500, true);
+			return;
+		}
+		var location=$("#hardwarecontent #divunderground #location").val();
+		if (location=="")
+		{
+			ShowNotify($.i18n('Please enter an Location!'), 2500, true);
+			return;
+		}
+		$.ajax({
+			 url: "json.htm?type=command&param=addhardware&htype=" + hardwaretype + "&port=1" + "&username=" + apikey + "&password=" + location + "&name=" + name + "&enabled=" + bEnabled,
 			 async: false, 
 			 dataType: 'json',
 			 success: function(data) {
@@ -671,6 +743,12 @@ function RefreshHardwareTable()
 						$("#hardwarecontent #hardwareparamsremote #tcpaddress").val(data["3"]);
 						$("#hardwarecontent #hardwareparamsremote #tcpport").val(data["4"]);
 					}
+					else
+					if (data["Type"].indexOf("Underground") >= 0)
+					{
+						$("#hardwarecontent #hardwareparamsunderground #apikey").val(data["Username"]);
+						$("#hardwarecontent #hardwareparamsunderground #location").val(data["Password"]);
+					}
 					if (data["Type"].indexOf("Domoticz") >= 0) {
 						$("#hardwarecontent #hardwareparamslogin #username").val(data["Username"]);
 						$("#hardwarecontent #hardwareparamslogin #password").val(data["Password"]);
@@ -693,30 +771,42 @@ function UpdateHardwareParamControls()
 		$("#hardwarecontent #divserial").hide();
 		$("#hardwarecontent #divremote").hide();
 		$("#hardwarecontent #divlogin").hide();
+		$("#hardwarecontent #divunderground").hide();
 	}
 	else if (text.indexOf("USB") >= 0)
 	{
 		$("#hardwarecontent #divserial").show();
 		$("#hardwarecontent #divremote").hide();
 		$("#hardwarecontent #divlogin").hide();
+		$("#hardwarecontent #divunderground").hide();
 	}
 	else if (text.indexOf("LAN") >= 0)
 	{
 		$("#hardwarecontent #divserial").hide();
 		$("#hardwarecontent #divremote").show();
 		$("#hardwarecontent #divlogin").hide();
+		$("#hardwarecontent #divunderground").hide();
 	}
 	else if (text.indexOf("Domoticz") >= 0)
 	{
 		$("#hardwarecontent #divserial").hide();
 		$("#hardwarecontent #divremote").show();
 		$("#hardwarecontent #divlogin").show();
+		$("#hardwarecontent #divunderground").hide();
+	}
+	else if (text.indexOf("Underground") >= 0)
+	{
+		$("#hardwarecontent #divserial").hide();
+		$("#hardwarecontent #divremote").hide();
+		$("#hardwarecontent #divlogin").hide();
+		$("#hardwarecontent #divunderground").show();
 	}
 	else
 	{
 		$("#hardwarecontent #divserial").hide();
 		$("#hardwarecontent #divremote").hide();
 		$("#hardwarecontent #divlogin").hide();
+		$("#hardwarecontent #divunderground").hide();
 	}
 }
 
